--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
 		"@heroicons/react": "^2.0.18",
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/mdx": "^15.4.6",
 		"@types/node": "20.2.0",
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
